# ecbf_redundant_ros

./: .gitignore  MANIFEST.sha256  NOTICE  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
docs/: ARCHITECTURE.md  REPOSITORY_TREE.md  ROS1_SETUP.md  VALIDATION.md
envsim/fr3-model/: fr3_ideal.xml  scene_ideal.xml
ros1_ws/: README.md
ros1_ws/src/: CMakeLists.txt
ros1_ws/src/ecbf_franka_controller/: CMakeLists.txt  ecbf_franka_controller_plugin.xml  package.xml
ros1_ws/src/ecbf_franka_controller/config/: ecbf_controller.yaml
ros1_ws/src/ecbf_franka_controller/include/ecbf_franka_controller/: cbf.h  ecbf_controller.h  math_utils.h  types.h
ros1_ws/src/ecbf_franka_controller/launch/: experiment.launch  gazebo_experiment.launch
ros1_ws/src/ecbf_franka_controller/msg/: EcbfDiagnostics.msg
ros1_ws/src/ecbf_franka_controller/scripts/: diagnostics_csv_logger.py  trial_supervisor.py
ros1_ws/src/ecbf_franka_controller/src/: cbf.cpp  ecbf_controller.cpp  math_utils.cpp
ros1_ws/src/ecbf_franka_controller/test/: test_cbf.cpp  test_math_utils.cpp
run/: config_dirfix.py  config_exp_dirfix.py  config_exp_op.py  config_exp_tot.py  config_gazebo_dirfix.py  config_op.py  config_tot.py  main.py  plot.py
scripts/: build_ros1.sh  run_tests.sh
src/mypkg/: __init__.py  buffer.py  cbf.py  constants.py  control.py  gazebo_experiment.py  kinematics.py  logger.py  plotting.py  ros1_experiment.py  simulation.py
tests/python/: test_cbf.py  test_control.py  test_mujoco_smoke.py  test_repository_style.py  test_ros1_configuration.py
