<?xml version="1.0"?>
<package format="2">
  <name>ecbf_franka_controller</name>
  <version>0.2.0</version>
  <description>ROS 1 Franka Cartesian impedance controller with kinetic-energy Control Barrier Functions.</description>

  <maintainer email="noreply@github.com">zanellar</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>eigen</build_depend>
  <build_depend>message_generation</build_depend>

  <depend>controller_interface</depend>
  <depend>controller_manager</depend>
  <depend>controller_manager_msgs</depend>
  <depend>franka_hw</depend>
  <depend>hardware_interface</depend>
  <depend>libfranka</depend>
  <depend>pluginlib</depend>
  <depend>realtime_tools</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <exec_depend>franka_control</exec_depend>
  <exec_depend>franka_description</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>franka_gazebo</exec_depend>

  <export>
    <controller_interface plugin="${prefix}/ecbf_franka_controller_plugin.xml"/>
  </export>
</package>
